# nibbler

./: .gitignore  Makefile  meson.build
audio/: AudioModule.cpp  AudioModule.hpp  gresource.c  gresource.xml  main.cpp  meson.build
core/: .main_utils.cpp.swp  Game.cpp  Game.hpp  Gameloop.cpp  Gameloop.hpp  ModuleAudio.cpp  ModuleAudio.hpp  Plugin.cpp  Plugin.hpp  Snake.cpp  Snake.hpp  Timer.cpp  Timer.hpp  main.cpp  main_utils.cpp  main_utils.h  meson.build
include/: IAudioModule.hpp  IGame.hpp  IPlugin.hpp  utils.hpp
raylib/: Button.cpp  Button.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  Menu.cpp  Menu.hpp  Plugin.cpp  Plugin.hpp  Score.cpp  Score.hpp  Snake.cpp  Snake.hpp  Timer.hpp  main.cpp  meson.build  utils.hpp
sdl/: Button.cpp  Button.hpp  Damier.cpp  Damier.hpp  Gameover.cpp  Gameover.h  Gameover.hpp  Menu.cpp  Menu.hpp  Plugin.cpp  Plugin.hpp  RenderTexture.cpp  RenderTexture.hpp  Text.cpp  Text.hpp  main.cpp  meson.build
sfml/: Animation.cpp  Animation.hpp  Apple.cpp  Apple.hpp  Background.cpp  Background.hpp  Button.cpp  Button.hpp  Gameover.cpp  Gameover.hpp  Header.cpp  Header.hpp  Menu.cpp  Menu.hpp  Plugin.cpp  Plugin.hpp  Snake.cpp  Snake.hpp  Sprite.cpp  Sprite.hpp  Timer.cpp  Timer.hpp  animation.cpp  animation.hpp  apple.cpp  apple.hpp  background.cpp  background.hpp  config.h  gameover.cpp  gameover.hpp  header.cpp  header.hpp  main.cpp  menu.cpp  menu.hpp  meson.build  snake.cpp  snake.hpp
sfml_bis/: main.cpp  meson.build
subprojects/: sfml.wrap
