project('nibbler', ['cpp', 'vala'], default_options : ['warning_level=3', 'cpp_std=c++17', 'optimization=3', 'werror=true'])

# subproject('glib',  default_options: [ 'tests=false', 'introspection=disabled', 'man-pages=false', 'bsymbolic_functions=false', 'glib_debug=disabled', 'glib_assert=false', 'glib_checks=false', 'werror=false'])

subdir('core')
subdir('sfml')
subdir('raylib')
subdir('sdl')
subdir('audio')
