executable('nibbler',
           'Game.cpp',
           'main.cpp',
           'main_utils.cpp',
           'Plugin.cpp',
           'Gameloop.cpp',
           'ModuleAudio.cpp',
           'Snake.cpp',
           'Timer.cpp',
           dependencies: dependency('glib-2.0'),
           install : true)
