dep = [dependency('raylib')]

shared_library('raylib',
           'main.cpp',
           'Plugin.cpp',
           'Snake.cpp',
           'Button.cpp',
           'GameOver.cpp',
           'Timer.cpp',
           'Game.cpp',
           'Score.cpp',
           dependencies: dep,
           install : true)
