dep = [dependency('sdl2'), dependency('cairo')]

shared_library('sdl',
           'main.cpp',
           'Text.cpp',
           'RenderTexture.cpp',
           'Damier.cpp',
           'Button.cpp',
           'Gameover.cpp',
           'Plugin.cpp',
           dependencies: dep,
           install : true)
