deps = [
  dependency('sfml-graphics')
]

shared_library('sfml',
           'apple.cpp',
           'background.cpp',
           'main.cpp',
           'header.cpp',
           'Menu.cpp',
           'Button.cpp',
           'snake.cpp',
           'gameover.cpp',
           'Timer.cpp',
           'Sprite.cpp',
           dependencies: deps,
           install : true)
