deps = [
  dependency('sfml-graphics')
]

shared_library('sfml',
           'Apple.cpp',
           'Plugin.cpp',
           'Background.cpp',
           'main.cpp',
           'Header.cpp',
           'Menu.cpp',
           'Button.cpp',
           'Snake.cpp',
           'Gameover.cpp',
           'Timer.cpp',
           'Sprite.cpp',
           dependencies: deps,
           install : true)
