deps = [
  dependency('sfml-graphics')
]

shared_library('sfml',
           'Animation.cpp',
           'Apple.cpp',
           'Plugin.cpp',
           'Background.cpp',
           'main.cpp',
           'Header.cpp',
           'Menu.cpp',
           'Button.cpp',
           'Snake.cpp',
           'Gameover.cpp',
           'Timer.cpp',
           dependencies: deps,
           install : true)
